app7DataMasking/microservice1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app7-microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app7-microservice1
  template:
    metadata:
      labels:
        app: app7-microservice1
    spec:
      containers:
      - name: app7-microservice1
        image: b0rkemborina/zta-cybersec-suite:app7microservice1
        ports:
        - containerPort: 8060
