app7DataMasking/microservice1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app7-microservice1
spec:
  selector:
    app: app7-microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8060
  type: ClusterIP
