app7DataMasking/microservice1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app7-microservice1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /data(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app7-microservice1
            port:
              number: 80
